web dev page, about page

--- a/prd/index.html
+++ b/prd/index.html
@@ -17,7 +17,7 @@
     <nav class="nav">
       <div class="c-nav">
         <div class="nav-category">
-          <ul><a href="#">Blog</a><a href="#">Web Dev</a><a href="#">Musica</a><a href="#">Audiovisual</a>
+          <ul><a href="#">Web Dev</a><a href="#">Art</a><a href="#">Blog</a>
           </ul>
         </div>
         <div class="main-info">          
@@ -54,6 +54,37 @@
         <li> <a href="#">ART</a></li>
       </ul>
     </div>
+    <section class="about"> 
+      <div class="c-img"></div>
+      <p>'Creo que la vida es el camina de la eterna exploración'</p>
+      <p>Me considero un eterno explorador de caminos artísticos. Todo empezó a los 12 con la guitarra. Ahora soy un artista multidimensional. </p>
+      <p> </p>
+    </section>
+    <section class="webdev"> 
+      <div class="presentation">
+        <p>"Quiero ser parte de lo que mueve al mundo".</p>
+      </div>
+      <div class="skills">
+        <h1>Front-End Developer</h1>
+        <p class="p-subtitles">Technologies</p>
+        <p class="technologies">HTML, Pug, CSS, SCSS, SASS, JS, REACT, REACT NATIVE</p>
+        <p class="p-subtitles">Dev Tools</p>
+        <ul class="lists">
+          <li>Git Hub</li>
+          <li>Visual Studio Code</li>
+          <li>PrePros</li>
+        </ul>
+      </div>
+      <div class="works">
+        <div class="works-title">
+          <h1>works</h1>
+        </div>
+        <ul class="work-list">
+          <li><a href="#">Personal Web</a></li>
+          <li><a href="#">Alguna APP </a></li>
+        </ul>
+      </div>
+    </section>
     <div class="blog">
       <div class="blog-entries"> 
         <div class="blog-entry"> 
