--- a/index.html
+++ b/index.html
@@ -4,52 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ariel</title>
+    <title>Ariel Soto</title>
     <link rel="stylesheet" href="./style.css">
   </head>
-  <body> 
-    <header class="header">
-      <div class="header-logo">
-        <h1>ARIEL SOTO</h1>
-      </div>
-      <div class="header-menu"><span class="icon-menu">   </span></div>
-    </header>
-    <nav class="nav">
-      <div class="c-nav">
-        <div class="nav-category">
-          <ul>
-            <li><a href="web-dev.html">Web Dev</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="art.html">Art </a></li>
-          </ul>
-        </div>
-        <div class="main-info">          
-          <div class="info-about"><a href="#">HOME</a><a href="#">ABOUT</a></div>
-          <div class="info-social">
-            <ul class="social-media"><a href="#">in</a><a href="#">IG</a><a href="#">IG.audiovisual</a><a href="#">IGfotografia </a></ul>
-            <ul class="phone">
-              <li>PHONE</li>
-              <li>+54 9 11 2243 1005</li>
-            </ul>
-            <ul class="addres"> 
-              <li>ADRRESS</li>
-              <li>Argentina, Buenos Aires, Pilar.  </li>
-            </ul>
-            <ul class="mail">
-              <li>EMAILS</li>
-              <li>arielestebansoto@gmail.com</li>
-              <li>arielestebansoto.av@gmail.com (audiovisual)</li>
-              <li>airlesotofotografia@gmail.com (fotografia eventos) </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </nav>
-    <div class="carousel"> <img src="./img/carousel/1.jpg" alt="">
-      <div class="carousel__titles"><span>view category</span>
-        <h1>Category </h1>
-      </div>
-    </div>
+  <body>
+    <header></header>
   </body>
   <script src="./index.js" type="module"></script>
 </html>
