init maquetation, nav

--- a/index.html
+++ b/index.html
@@ -8,13 +8,33 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <header>
-      <div class="nav-container"> 
-        <div class="nav-icon"></div>
-        <div class="nav-section"></div>
-        <div class="nav-menu"></div>
-      </div>
+    <header class="nav"> 
+      <div class="nav-icon"><span>a</span></div>
+      <div class="nav-section"></div>
+      <div class="nav-menu"><span>menu</span></div>
     </header>
+    <main class="main"> 
+      <h1>hoooolaaaaaaa</h1>
+      <h1>hoooolaaaaaaa</h1>
+      <h1>hoooolaaaaaaa</h1>
+      <h1>hoooolaaaaaaa</h1>
+      <h1>hoooolaaaaaaa</h1>
+      <h1>hoooolaaaaaaa</h1>
+      <h1>hoooolaaaaaaa</h1>
+      <h1>hoooolaaaaaaa</h1>
+      <h1>hoooolaaaaaaa</h1>
+      <h1>hoooolaaaaaaa</h1>
+      <h1>hoooolaaaaaaa</h1>
+      <h1>hoooolaaaaaaa</h1>
+      <h1>hoooolaaaaaaa</h1>
+      <h1>hoooolaaaaaaa</h1>
+      <h1>hoooolaaaaaaa</h1>
+      <h1>hoooolaaaaaaa</h1>
+      <h1>hoooolaaaaaaa</h1>
+      <h1>hoooolaaaaaaa</h1>
+      <h1>hoooolaaaaaaa</h1>
+      <h1>hoooolaaaaaaa</h1>
+    </main>
   </body>
   <script src="./index.js" type="module"></script>
 </html>
