grid interpolation, top nav bar

--- a/index.html
+++ b/index.html
@@ -13,28 +13,9 @@
       <div class="nav-section"></div>
       <div class="nav-menu"><span>menu</span></div>
     </header>
-    <main class="main"> 
-      <h1>hoooolaaaaaaa</h1>
-      <h1>hoooolaaaaaaa</h1>
-      <h1>hoooolaaaaaaa</h1>
-      <h1>hoooolaaaaaaa</h1>
-      <h1>hoooolaaaaaaa</h1>
-      <h1>hoooolaaaaaaa</h1>
-      <h1>hoooolaaaaaaa</h1>
-      <h1>hoooolaaaaaaa</h1>
-      <h1>hoooolaaaaaaa</h1>
-      <h1>hoooolaaaaaaa</h1>
-      <h1>hoooolaaaaaaa</h1>
-      <h1>hoooolaaaaaaa</h1>
-      <h1>hoooolaaaaaaa</h1>
-      <h1>hoooolaaaaaaa</h1>
-      <h1>hoooolaaaaaaa</h1>
-      <h1>hoooolaaaaaaa</h1>
-      <h1>hoooolaaaaaaa</h1>
-      <h1>hoooolaaaaaaa</h1>
-      <h1>hoooolaaaaaaa</h1>
-      <h1>hoooolaaaaaaa</h1>
-    </main>
+    <main class="main"></main>
+    <section class="skills"> </section>
+    <section class="projects"></section>
   </body>
   <script src="./index.js" type="module"></script>
 </html>
