--- a/index.html
+++ b/index.html
@@ -13,9 +13,29 @@
       <div class="nav-section"></div>
       <div class="nav-menu"><span>menu</span></div>
     </header>
-    <main class="main"></main>
-    <section class="skills"> </section>
-    <section class="projects"></section>
+    <main class="main">
+      <div class="main-subtitle">
+        <h1>Front-End Developer.</h1>
+      </div>
+      <div class="main-title">
+        <h1>Ariel Soto</h1>
+      </div>
+    </main>
+    <section class="section-main section-skill">
+      <h1 class="section-main-title">Skills</h1>
+      <p class="section-main-text">I'm interesting in the cliente side. Front End is what I'm really into. I like design interfaces. </p>
+      <h2 class="section-main-subtitle">Technologies</h2>
+      <div class="skills-container"></div>
+    </section>
+    <section class="section-main section-project">
+      <h1 class="section-main-title">Projects</h1>
+      <div class="projects-container">
+        <div class="card-project">
+          <div class="card-project--image"></div>
+          <h1 class="card-project--title"></h1>
+        </div>
+      </div>
+    </section>
   </body>
   <script src="./index.js" type="module"></script>
 </html>
