refactoring index with include,init section card-project

--- a/index.html
+++ b/index.html
@@ -29,11 +29,19 @@
     </section>
     <section class="section-main section-project">
       <h1 class="section-main-title">Projects</h1>
-      <div class="projects-container">
-        <div class="card-project">
-          <div class="card-project--image"></div>
-          <h1 class="card-project--title"></h1>
-        </div>
+      <div class="project-container">
+            <div class="card-project"> 
+              <div class="card-project__image"><img src="./img/project/1.jpg" alt="none"></div>
+              <div class="card-project__info"><a class="card-project--title" href="#">El camisa Perro El camisa Perro</a></div>
+            </div>
+            <div class="card-project"> 
+              <div class="card-project__image"><img src="./img/project/1.jpg" alt="none"></div>
+              <div class="card-project__info"><a class="card-project--title" href="#">bla</a></div>
+            </div>
+            <div class="card-project"> 
+              <div class="card-project__image"><img src="./img/project/1.jpg" alt="none"></div>
+              <div class="card-project__info"><a class="card-project--title" href="#">yggg yggg</a></div>
+            </div>
       </div>
     </section>
   </body>
