min a max sizes for cards

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="project-container">
             <div class="card-project"> 
               <div class="card-project__image"><img src="./img/project/1.jpg" alt="none"></div>
-              <div class="card-project__info"><a class="card-project--title" href="#">El camisa Perro El camisa Perro</a></div>
+              <div class="card-project__info"><a class="card-project--title" href="#">Mercado Libre Home</a></div>
             </div>
             <div class="card-project"> 
               <div class="card-project__image"><img src="./img/project/1.jpg" alt="none"></div>
