init menu maquetation

--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
       <div class="nav-section"></div>
       <div class="nav-menu"><span>menu</span></div>
     </header>
+    <div class="menu"> 
+      <div class="menu-list">
+        <ul></ul>
+        <li><a class="menu-link" href="./webdev">Web Dev</a></li>
+        <li><a class="menu-link" href="./music">Music</a></li>
+        <li><a class="menu-link" href="./audiovisual">Audiovisual</a></li>
+        <li><a class="menu-link" href="./blog">Blog</a></li>
+      </div>
+      <div class="menu-social">
+        <div class="about"><a href="./about">About</a></div>
+        <div class="social-media">
+          <div class="icon"></div>
+          <div class="icon"> </div>
+          <div class="icon"></div>
+        </div>
+        <div class="contact"> </div>
+      </div>
+    </div>
     <main class="main">
       <div class="main-subtitle">
         <h1>Front-End Developer.</h1>
