menu maquetation, contact page refactoring

--- a/about.html
+++ b/about.html
@@ -13,6 +13,12 @@
       <div class="nav-section"></div>
       <div class="nav-menu"><span>menu</span></div>
     </header>
+    <div class="section-main section-about">
+      <h1 class="section-main-title">About</h1>
+      <p class="section-main-text">I define my self as an multidementional artist: Musician, Producer, Guitarrist, Bassits, Singer, Mixing and Master engineer. Photographer, filmaker, editor, colorist.</p>
+      <p class="section-main-text">love the digital world. found that Web Development is one of the most exciting world. The best combination of art and technical side. </p>
+    </div>
+    <div class="about-galery"></div>
   </body>
   <script src="./index.js" type="module"></script>
 </html>
