--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Ariel Soto</title>
     <link rel="stylesheet" href="./style.css">
   </head>
-  <body>
+  <body class="body">
     <header class="nav"> 
-      <div class="nav-icon"><span>a</span></div>
+      <div class="nav-icon"><a href="./index.html"> a</a></div>
       <div class="nav-section"></div>
       <div class="nav-menu"><span>menu</span></div>
     </header>
@@ -21,14 +21,14 @@
         <li><a class="menu-link" href="./audiovisual">Audiovisual</a></li>
         <li><a class="menu-link" href="./blog">Blog</a></li>
       </div>
-      <div class="menu-social">
-        <div class="about"><a href="./about">About</a></div>
+      <div class="menu-contact">
+        <div class="about"><a href="./about.html">About</a></div>
         <div class="social-media">
           <div class="icon"></div>
           <div class="icon"> </div>
           <div class="icon"></div>
         </div>
-        <div class="contact"> </div>
+        <div class="contact-me"><span class="mail">arielestebansoto@gmail.com</span><span class="phone">+54 9 11 2243 1005</span><span class="location">Argentina, Buenos Aires, Pilar.</span></div>
       </div>
     </div>
     <main class="main">
