hamburger menu, transition left

--- a/about.html
+++ b/about.html
@@ -11,8 +11,28 @@
     <header class="nav"> 
       <div class="nav-icon"><a href="./index.html"> a</a></div>
       <div class="nav-section"></div>
-      <div class="nav-menu"><span>menu</span></div>
+      <div class="nav-menu">
+        <input type="checkbox" name="hamburgermenu" id="checkbox"><span>menu</span><span>close</span>
+      </div>
     </header>
+    <div class="menu"> 
+      <div class="menu-list">
+        <ul></ul>
+        <li><a class="menu-link" href="./webdev">Web Dev</a></li>
+        <li><a class="menu-link" href="./music">Music</a></li>
+        <li><a class="menu-link" href="./audiovisual">Audiovisual</a></li>
+        <li><a class="menu-link" href="./blog">Blog</a></li>
+      </div>
+      <div class="menu-contact">
+        <div class="about"><a href="./about.html">About</a></div>
+        <div class="social-media">
+          <div class="icon"></div>
+          <div class="icon"> </div>
+          <div class="icon"></div>
+        </div>
+        <div class="contact-me"><span class="mail">arielestebansoto@gmail.com</span><span class="phone">+54 9 11 2243 1005</span><span class="location">Argentina, Buenos Aires, Pilar.</span></div>
+      </div>
+    </div>
     <div class="section-main section-about">
       <h1 class="section-main-title">About</h1>
       <p class="section-main-text">I define my self as an multidementional artist: Musician, Producer, Guitarrist, Bassits, Singer, Mixing and Master engineer. Photographer, filmaker, editor, colorist.</p>
