init music page

--- a/music.html
+++ b/music.html
@@ -33,6 +33,22 @@
         <div class="contact-me"><span class="mail">arielestebansoto@gmail.com</span><span class="phone">+54 9 11 2243 1005</span><span class="location">Argentina, Buenos Aires, Pilar.</span></div>
       </div>
     </div>
+    <section class="music">
+      <div class="music-hero">
+        <div class="music-image"></div>
+        <h1 class="music-title"></h1>
+      </div>
+      <div class="music-song">
+        <h1 class="music-title"></h1>
+        <div class="card-song">
+          <div class="card-song-image"> <img src="/" alt=""></div>
+          <div class="card-song-title"></div>
+          <div class="card-song-play">
+            <div class="icon-play"></div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
   <script src="./index.js" type="module"></script>
 </html>
