--- a/src/html/about.html
+++ b/src/html/about.html
@@ -19,8 +19,8 @@
       <div class="menu-list">
         <ul></ul>
         <li><a class="menu-link" href="./webdev">Web Dev</a></li>
-        <li><a class="menu-link" href="./music.html">Music</a></li>
-        <li><a class="menu-link" href="./audiovisual.html">Audiovisual</a></li>
+        <li><a class="menu-link" href="./music">Music</a></li>
+        <li><a class="menu-link" href="./audiovisual">Audiovisual</a></li>
         <li><a class="menu-link" href="./blog">Blog</a></li>
       </div>
       <div class="menu-contact">
@@ -33,6 +33,12 @@
         <div class="contact-me"><span class="mail">arielestebansoto@gmail.com</span><span class="phone">+54 9 11 2243 1005</span><span class="location">Argentina, Buenos Aires, Pilar.</span></div>
       </div>
     </div>
+    <div class="section-main section-about">
+      <h1 class="section-main-title">About</h1>
+      <p class="section-main-text">I define my self as an multidementional artist: Musician, Producer, Guitarrist, Bassits, Singer, Mixing and Master engineer. Photographer, filmaker, editor, colorist.</p>
+      <p class="section-main-text">love the digital world. found that Web Development is one of the most exciting world. The best combination of art and technical side. </p>
+    </div>
+    <div class="about-galery"></div>
   </body>
   <script src="./index.js" type="module"></script>
 </html>
