--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <div class="menu-list">
         <ul></ul>
         <li><a class="menu-link" href="./webdev">Web Dev</a></li>
-        <li><a class="menu-link" href="./music">Music</a></li>
-        <li><a class="menu-link" href="./audiovisual">Audiovisual</a></li>
+        <li><a class="menu-link" href="./music.html">Music</a></li>
+        <li><a class="menu-link" href="./audiovisual.html">Audiovisual</a></li>
         <li><a class="menu-link" href="./blog">Blog</a></li>
       </div>
       <div class="menu-contact">
