--- a/music.html
+++ b/music.html
@@ -18,7 +18,7 @@
     <div class="menu"> 
       <div class="menu-list">
         <ul></ul>
-        <li><a class="menu-link" href="./webdev">Web Dev</a></li>
+        <li><a class="menu-link" href="./index.html">Web Dev</a></li>
         <li><a class="menu-link" href="./music.html">Music</a></li>
         <li><a class="menu-link" href="./audiovisual.html">Audiovisual</a></li>
         <li><a class="menu-link" href="./blog">Blog</a></li>
@@ -35,17 +35,14 @@
     </div>
     <section class="music">
       <div class="music-hero">
-        <div class="music-image"></div>
-        <h1 class="music-title"></h1>
+        <h1 class="music-hero-title">Stephen Soto</h1>
       </div>
-      <div class="music-song">
-        <h1 class="music-title"></h1>
+      <div class="music-list">
+        <h1 class="music-title">Stephen Soto</h1>
         <div class="card-song">
-          <div class="card-song-image"> <img src="/" alt=""></div>
-          <div class="card-song-title"></div>
-          <div class="card-song-play">
-            <div class="icon-play"></div>
-          </div>
+          <div class="card-song-thumbnail"><img src="./img/music/song/song1.jpg" alt=""/></div>
+          <h1 class="card-song-title">Misterio</h1>
+          <div class="card-song-play"><img src="./icon/music/icon-play.png" alt=""/></div>
         </div>
       </div>
     </section>
