--- a/src/html/about.html
+++ b/src/html/about.html
@@ -18,9 +18,9 @@
     <div class="menu"> 
       <div class="menu-list">
         <ul></ul>
-        <li><a class="menu-link" href="./webdev">Web Dev</a></li>
-        <li><a class="menu-link" href="./music">Music</a></li>
-        <li><a class="menu-link" href="./audiovisual">Audiovisual</a></li>
+        <li><a class="menu-link" href="./index.html">Web Dev</a></li>
+        <li><a class="menu-link" href="./music.html">Music</a></li>
+        <li><a class="menu-link" href="./audiovisual.html">Audiovisual</a></li>
         <li><a class="menu-link" href="./blog">Blog</a></li>
       </div>
       <div class="menu-contact">
