--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="menu"> 
       <div class="menu-list">
         <ul></ul>
-        <li><a class="menu-link" href="./webdev">Web Dev</a></li>
+        <li><a class="menu-link" href="./index.html">Web Dev</a></li>
         <li><a class="menu-link" href="./music.html">Music</a></li>
         <li><a class="menu-link" href="./audiovisual.html">Audiovisual</a></li>
         <li><a class="menu-link" href="./blog">Blog</a></li>
