refactoring head tag, check post section rooting

--- a/music.html
+++ b/music.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ariel Soto</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>Music</title>
+    <link rel="stylesheet" href="./style.css"/>
   </head>
   <body class="body">
     <header class="nav"> 
@@ -21,7 +21,7 @@
         <li><a class="menu-link" href="./index.html">Web Dev</a></li>
         <li><a class="menu-link" href="./music.html">Music</a></li>
         <li><a class="menu-link" href="./audiovisual.html">Audiovisual</a></li>
-        <li><a class="menu-link" href="./blog">Blog</a></li>
+        <li><a class="menu-link" href="./blog.html">Blog</a></li>
       </div>
       <div class="menu-contact">
         <div class="about"><a href="./about.html">About</a></div>
