menu responsive, skill section responsive

--- a/index.html
+++ b/index.html
@@ -43,9 +43,22 @@
     </main>
     <section class="section-main section-skill">
       <h1 class="section-main-title">Skills</h1>
-      <p class="section-main-text">I'm interesting in the cliente side. Front End is what I'm really into. I like design interfaces. </p>
-      <h2 class="section-main-subtitle">Technologies</h2>
-      <div class="skills-container"></div>
+      <div class="subsection-skill">
+        <div class="subsection-1-skill">
+          <p class="section-main-text">I'm interesting in the cliente side. Front End is what I'm really into. I like design interfaces. </p>
+        </div>
+        <div class="subsection-2-skill">
+          <h2 class="section-main-subtitle">Technologies</h2>
+          <div class="skill-container">
+            <div class="icon"></div>
+            <div class="icon"></div>
+            <div class="icon"></div>
+            <div class="icon"></div>
+            <div class="icon"></div>
+            <div class="icon"></div>
+          </div>
+        </div>
+      </div>
     </section>
     <section class="section-main section-project">
       <h1 class="section-main-title">Projects</h1>
