responsive home, icon-technologies

--- a/index.html
+++ b/index.html
@@ -50,31 +50,53 @@
         <div class="subsection-2-skill">
           <h2 class="section-main-subtitle">Technologies</h2>
           <div class="skill-container">
-            <div class="icon"></div>
-            <div class="icon"></div>
-            <div class="icon"></div>
-            <div class="icon"></div>
-            <div class="icon"></div>
-            <div class="icon"></div>
+            <!-- https://www.pngwing.com/es/free-png-pavgq/download-->
+            <div class="icon-tech-container">
+              <h3 class="icon-tech-title">html</h3><img class="icon-tech" src="./img/icon-tech/html.png" alt="icon">
+            </div>
+            <div class="icon-tech-container">
+              <h3 class="icon-tech-title">css</h3><img class="icon-tech" src="./img/icon-tech/css.png" alt="icon">
+            </div>
+            <div class="icon-tech-container">
+              <h3 class="icon-tech-title">javascript</h3><img class="icon-tech" src="./img/icon-tech/javascript.png" alt="icon">
+            </div>
+            <div class="icon-tech-container">
+              <h3 class="icon-tech-title">sass</h3><img class="icon-tech" src="./img/icon-tech/sass.png" alt="icon">
+            </div>
+            <div class="icon-tech-container">
+              <h3 class="icon-tech-title">pug</h3><img class="icon-tech" src="./img/icon-tech/pug.png" alt="icon">
+            </div>
+            <div class="icon-tech-container">
+              <h3 class="icon-tech-title">prepros</h3><img class="icon-tech" src="./img/icon-tech/prepros.png" alt="icon">
+            </div>
+            <div class="icon-tech-container">
+              <h3 class="icon-tech-title">github</h3><img class="icon-tech" src="./img/icon-tech/github.png" alt="icon">
+            </div>
+            <div class="icon-tech-container">
+              <h3 class="icon-tech-title">vsc</h3><img class="icon-tech" src="./img/icon-tech/vsc.png" alt="icon">
+            </div>
+            <div class="icon-tech-container">
+              <h3 class="icon-tech-title">figma</h3><img class="icon-tech" src="./img/icon-tech/figma.png" alt="icon">
+            </div>
           </div>
         </div>
       </div>
     </section>
     <section class="section-main section-project">
       <h1 class="section-main-title">Projects</h1>
-      <div class="project-container">
-            <div class="card-project"> 
+      <div class="project-container"><a class="card-project" href="index.html"> 
+              <div class="card-project__image"><img src="./img/project/mercadolibre.jpg" alt="none"></div>
+              <div class="card-project__info">
+                <h1 class="card-project--title">Mercado Libre Home</h1>
+              </div></a><a class="card-project" href="index.html"> 
               <div class="card-project__image"><img src="./img/project/1.jpg" alt="none"></div>
-              <div class="card-project__info"><a class="card-project--title" href="#">Mercado Libre Home</a></div>
-            </div>
-            <div class="card-project"> 
+              <div class="card-project__info">
+                <h1 class="card-project--title">bla</h1>
+              </div></a><a class="card-project" href="index.html"> 
               <div class="card-project__image"><img src="./img/project/1.jpg" alt="none"></div>
-              <div class="card-project__info"><a class="card-project--title" href="#">bla</a></div>
-            </div>
-            <div class="card-project"> 
-              <div class="card-project__image"><img src="./img/project/1.jpg" alt="none"></div>
-              <div class="card-project__info"><a class="card-project--title" href="#">yggg yggg</a></div>
-            </div>
+              <div class="card-project__info">
+                <h1 class="card-project--title">yggg yggg</h1>
+              </div></a>
       </div>
     </section>
   </body>
