complete responsive, refactoring the rooting

--- a/about.html
+++ b/about.html
@@ -39,6 +39,6 @@
       <p class="section-main-text">love the digital world. found that Web Development is one of the most exciting world. The best combination of art and technical side. </p>
     </div>
     <div class="about-galery"></div>
+    <script src="./index.js"></script>
   </body>
-  <script src="./index.js" type="module"></script>
 </html>
