--- a/music.html
+++ b/music.html
@@ -37,15 +37,52 @@
       <div class="music-hero">
         <h1 class="music-hero-title">Stephen Soto</h1>
       </div>
-      <div class="music-list">
+      <div class="music-songs">   
         <h1 class="music-title">Stephen Soto</h1>
-        <div class="card-song">
-          <div class="card-song-thumbnail"><img src="./img/music/song/song1.jpg" alt=""/></div>
-          <h1 class="card-song-title">Misterio</h1>
-          <div class="card-song-play"><img src="./icon/music/icon-play.png" alt=""/></div>
+        <div class="music-list">
+          <div class="card-song">
+            <div class="card-song-thumbnail"><img src="./img/music/song/song1.jpg" alt=""/></div>
+            <h1 class="card-song-title">Misterio</h1>
+            <div class="card-song-play"><img src="./icon/music/icon-play.png" alt=""/></div>
+          </div>
+          <div class="card-song">
+            <div class="card-song-thumbnail"><img src="./img/music/song/song1.jpg" alt=""/></div>
+            <h1 class="card-song-title">123sadxzxc</h1>
+            <div class="card-song-play"><img src="./icon/music/icon-play.png" alt=""/></div>
+          </div>
+          <div class="card-song">
+            <div class="card-song-thumbnail"><img src="./img/music/song/song1.jpg" alt=""/></div>
+            <h1 class="card-song-title">Mytiuhgbb</h1>
+            <div class="card-song-play"><img src="./icon/music/icon-play.png" alt=""/></div>
+          </div>
+          <div class="card-song">
+            <div class="card-song-thumbnail"><img src="./img/music/song/song1.jpg" alt=""/></div>
+            <h1 class="card-song-title">Misrtyrtuerio</h1>
+            <div class="card-song-play"><img src="./icon/music/icon-play.png" alt=""/></div>
+          </div>
+          <div class="card-song">
+            <div class="card-song-thumbnail"><img src="./img/music/song/song1.jpg" alt=""/></div>
+            <h1 class="card-song-title">Misvbnrfterio</h1>
+            <div class="card-song-play"><img src="./icon/music/icon-play.png" alt=""/></div>
+          </div>
+          <div class="card-song">
+            <div class="card-song-thumbnail"><img src="./img/music/song/song1.jpg" alt=""/></div>
+            <h1 class="card-song-title">Mvbnrto</h1>
+            <div class="card-song-play"><img src="./icon/music/icon-play.png" alt=""/></div>
+          </div>
+          <div class="card-song">
+            <div class="card-song-thumbnail"><img src="./img/music/song/song1.jpg" alt=""/></div>
+            <h1 class="card-song-title">Misterio</h1>
+            <div class="card-song-play"><img src="./icon/music/icon-play.png" alt=""/></div>
+          </div>
+          <div class="card-song">
+            <div class="card-song-thumbnail"><img src="./img/music/song/song1.jpg" alt=""/></div>
+            <h1 class="card-song-title">Misterio</h1>
+            <div class="card-song-play"><img src="./icon/music/icon-play.png" alt=""/></div>
+          </div>
         </div>
       </div>
     </section>
+    <script src="./index.js"></script>
   </body>
-  <script src="./index.js" type="module"></script>
 </html>
