--- a/audiovisual.html
+++ b/audiovisual.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ariel Soto</title>
+    <title>Audiovisual</title>
     <link rel="stylesheet" href="./style.css"/>
   </head>
   <body class="body">
@@ -57,6 +57,6 @@
       <div class="img-container"> <img src="./img/quickgalery/quickgaleryimages-21.jpg" alt="social photgraphy"></div>
       <div class="img-container"> <img src="./img/quickgalery/quickgaleryimages-22.jpg" alt="social photgraphy"></div>
     </section>
+    <script src="./index.js"></script>
   </body>
-  <script src="./index.js" type="module"></script>
 </html>
