--- a/index.html
+++ b/index.html
@@ -99,6 +99,6 @@
               </div></a>
       </div>
     </section>
+    <script src="./index.js"></script>
   </body>
-  <script src="./index.js" type="module"></script>
 </html>
