details for responsive design

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
         <div class="contact-me"><span class="mail">arielestebansoto@gmail.com</span><span class="phone">+54 9 11 2243 1005</span><span class="location">Argentina, Buenos Aires, Pilar.</span></div>
       </div>
     </div>
-    <div class="section-main section-about">
+    <div class="section-about">
       <h1 class="section-main-title">About</h1>
       <p class="section-main-text">I define my self as an multidementional artist: Musician, Producer, Guitarrist, Bassits, Singer, Mixing and Master engineer. Photographer, filmaker, editor, colorist.</p>
       <p class="section-main-text">love the digital world. found that Web Development is one of the most exciting world. The best combination of art and technical side. </p>
