--- a/blog.html
+++ b/blog.html
@@ -33,19 +33,10 @@
         <div class="contact-me"><span class="mail">arielestebansoto@gmail.com</span><span class="phone">+54 9 11 2243 1005</span><span class="location">Argentina, Buenos Aires, Pilar.</span></div>
       </div>
     </div>
-    <section class="section section-blog">
+    <section class="section-blog">
       <h1 class="section-main-title">Blog</h1>
-      <div class="blog-entries"><a class="blog-entry" href="./blog/post.html">
-          <h1 class="blog-title">Title </h1>
-          <p class="blog-extract">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p><span class="blog-date">1 Ene 2021.</span></a><a class="blog-entry" href="./blog/post.html">
-          <h1 class="blog-title">Title </h1>
-          <p class="blog-extract">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p><span class="blog-date">1 Ene 2021.</span></a><a class="blog-entry" href="./blog/post.html">
-          <h1 class="blog-title">Title </h1>
-          <p class="blog-extract">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p><span class="blog-date">1 Ene 2021.</span></a><a class="blog-entry" href="./blog/post.html">
-          <h1 class="blog-title">Title </h1>
-          <p class="blog-extract">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p><span class="blog-date">1 Ene 2021.</span></a>
-      </div>
+      <div class="blog-entries"></div>
     </section>
+    <script src="/index.js"></script>
   </body>
-  <script src="./index.js" type="module"></script>
 </html>
