--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h1>Ariel Soto</h1>
       </div>
     </main>
-    <section class="section-main section-skill">
+    <section class="section-skill">
       <h1 class="section-main-title">Skills</h1>
       <div class="subsection-skill">
         <div class="subsection-1-skill">
@@ -82,23 +82,16 @@
         </div>
       </div>
     </section>
-    <section class="section-main section-project">
+    <section class="section-project">
       <h1 class="section-main-title">Projects</h1>
       <div class="project-container"><a class="card-project" href="index.html"> 
               <div class="card-project__image"><img src="./img/project/mercadolibre.jpg" alt="none"></div>
               <div class="card-project__info">
                 <h1 class="card-project--title">Mercado Libre Home</h1>
-              </div></a><a class="card-project" href="index.html"> 
-              <div class="card-project__image"><img src="./img/project/1.jpg" alt="none"></div>
-              <div class="card-project__info">
-                <h1 class="card-project--title">bla</h1>
-              </div></a><a class="card-project" href="index.html"> 
-              <div class="card-project__image"><img src="./img/project/1.jpg" alt="none"></div>
-              <div class="card-project__info">
-                <h1 class="card-project--title">yggg yggg</h1>
-              </div></a>
+              </div>
+              <div class="card-project-hover"></div></a>
       </div>
     </section>
-    <script src="./index.js"></script>
+    <script src="/index.js"></script>
   </body>
 </html>
