--- a/index.html
+++ b/index.html
@@ -92,6 +92,6 @@
               <div class="card-project-hover"></div></a>
       </div>
     </section>
-    <script src="/index.js"></script>
+    <script src="/index.js" type="module"></script>
   </body>
 </html>
