--- a/index.html
+++ b/index.html
@@ -8,13 +8,6 @@
     <link rel="stylesheet" href="./style.css"/>
   </head>
   <body class="body">
-    <header class="nav"> 
-      <div class="nav-icon"><a href="./index.html"> a</a></div>
-      <div class="nav-section"></div>
-      <div class="nav-menu">
-        <input type="checkbox" name="hamburgermenu" id="checkbox"><span>menu</span><span>close</span>
-      </div>
-    </header>
     <div class="menu"> 
       <div class="menu-list">
         <ul></ul>
@@ -33,6 +26,7 @@
         <div class="contact-me"><span class="mail">arielestebansoto@gmail.com</span><span class="phone">+54 9 11 2243 1005</span><span class="location">Argentina, Buenos Aires, Pilar.</span></div>
       </div>
     </div>
+    <my-header link-home="/index.html"></my-header>
     <main class="main">
       <div class="main-subtitle">
         <h1>Front-End Developer.</h1>
@@ -92,6 +86,6 @@
               <div class="card-project-hover"></div></a>
       </div>
     </section>
-    <script src="/index.js" type="module"></script>
+    <script src="/wc.js" type="module"></script>
   </body>
 </html>
