more skills icons, icon-tech block size auto

--- a/index.html
+++ b/index.html
@@ -45,12 +45,21 @@
       <h1 class="section-main-title">Skills</h1>
       <div class="subsection-skill">
         <div class="subsection-1-skill">
-          <p class="section-main-text">I'm interesting in the cliente side. Front End is what I'm really into. I like design interfaces. </p>
+          <p class="section-main-text">Front End is what I'm really into. I'm also interested in MERN Stack . </p>
         </div>
         <div class="subsection-2-skill">
           <h2 class="section-main-subtitle">Technologies</h2>
           <div class="skill-container">
             <!-- https://www.pngwing.com/es/free-png-pavgq/download-->
+            <div class="icon-tech-container">
+              <h3 class="icon-tech-title">github</h3><img class="icon-tech" src="./img/icon-tech/github.png" alt="icon">
+            </div>
+            <div class="icon-tech-container">
+              <h3 class="icon-tech-title">vsc</h3><img class="icon-tech" src="./img/icon-tech/vsc.png" alt="icon">
+            </div>
+            <div class="icon-tech-container">
+              <h3 class="icon-tech-title">npm</h3><img class="icon-tech" src="./img/icon-tech/npm.png" alt="icon">
+            </div>
             <div class="icon-tech-container">
               <h3 class="icon-tech-title">html</h3><img class="icon-tech" src="./img/icon-tech/html.png" alt="icon">
             </div>
@@ -61,22 +70,34 @@
               <h3 class="icon-tech-title">javascript</h3><img class="icon-tech" src="./img/icon-tech/javascript.png" alt="icon">
             </div>
             <div class="icon-tech-container">
-              <h3 class="icon-tech-title">sass</h3><img class="icon-tech" src="./img/icon-tech/sass.png" alt="icon">
-            </div>
-            <div class="icon-tech-container">
               <h3 class="icon-tech-title">pug</h3><img class="icon-tech" src="./img/icon-tech/pug.png" alt="icon">
             </div>
             <div class="icon-tech-container">
-              <h3 class="icon-tech-title">prepros</h3><img class="icon-tech" src="./img/icon-tech/prepros.png" alt="icon">
+              <h3 class="icon-tech-title">sass</h3><img class="icon-tech" src="./img/icon-tech/sass.png" alt="icon">
             </div>
             <div class="icon-tech-container">
-              <h3 class="icon-tech-title">github</h3><img class="icon-tech" src="./img/icon-tech/github.png" alt="icon">
+              <h3 class="icon-tech-title">bootstrap</h3><img class="icon-tech" src="./img/icon-tech/bootstrap.png" alt="icon">
             </div>
             <div class="icon-tech-container">
-              <h3 class="icon-tech-title">vsc</h3><img class="icon-tech" src="./img/icon-tech/vsc.png" alt="icon">
+              <h3 class="icon-tech-title">materialize</h3><img class="icon-tech" src="./img/icon-tech/materialize.png" alt="icon">
             </div>
             <div class="icon-tech-container">
               <h3 class="icon-tech-title">figma</h3><img class="icon-tech" src="./img/icon-tech/figma.png" alt="icon">
+            </div>
+          </div>
+          <h2 class="section-main-subtitle">Learning </h2>
+          <div class="skill-container">
+            <div class="icon-tech-container">
+              <h3 class="icon-tech-title">typescript</h3><img class="icon-tech" src="./img/icon-tech/typescript.png" alt="icon">
+            </div>
+            <div class="icon-tech-container">
+              <h3 class="icon-tech-title">react</h3><img class="icon-tech" src="./img/icon-tech/react.png" alt="icon">
+            </div>
+            <div class="icon-tech-container">
+              <h3 class="icon-tech-title">database</h3><img class="icon-tech" src="./img/icon-tech/database.png" alt="icon">
+            </div>
+            <div class="icon-tech-container">
+              <h3 class="icon-tech-title">node</h3><img class="icon-tech" src="./img/icon-tech/node.png" alt="icon">
             </div>
           </div>
         </div>
