project is deployed

--- a/index.html
+++ b/index.html
@@ -105,12 +105,15 @@
     </section>
     <section class="section-project">
       <h1 class="section-main-title">Projects</h1>
-      <div class="project-container"><a class="card-project" href="index.html"> 
-              <div class="card-project__image"><img src="./img/project/mercadolibre.jpg" alt="none"></div>
-              <div class="card-project__info">
-                <h1 class="card-project--title">Mercado Libre Home</h1>
-              </div>
-              <div class="card-project-hover"></div></a>
+      <div class="project-container">
+            <div class="card-project"><img src="/img/project/1.jpg" alt="project image">
+              <div class="card--info"><a class="card-project--title" href="/index.html">arielestebansoto.com </a><span class="card-project__info--about">about the project</span></div>
+              <div class="card-project-overlay"> </div>
+            </div>
+            <div class="card-project"><img src="/img/project/mercadolibre.jpg" alt="project image">
+              <div class="card--info"><a class="card-project--title" href="/projects/mercado-libre-home/index.html">Mercado Libre Home </a><span class="card-project__info--about">about the project</span></div>
+              <div class="card-project-overlay"> </div>
+            </div>
       </div>
     </section>
     <script src="/index.js" type="module"></script>
