refactoring: %sections of scss, menu, nav, main

--- a/about.html
+++ b/about.html
@@ -11,10 +11,17 @@
     <div class="menu"> 
       <div class="menu-list">
         <ul></ul>
-        <li><a class="menu-link" href="/index.html">Web Dev</a></li>
-        <li><a class="menu-link" href="/music.html">Music</a></li>
-        <li><a class="menu-link" href="/audiovisual.html">Audiovisual</a></li>
-        <li><a class="menu-link" href="/blog.html">Blog</a></li>
+        <li><a class="menu-link" href="/index.html">Web Dev</a>
+        </li>
+        <li>
+          <del> <a class="menu-link" href="/">Music</a></del>
+        </li>
+        <li>
+          <del> <a class="menu-link" href="/">Audiovisual</a></del>
+        </li>
+        <li>
+          <del> <a class="menu-link" href="/">Blog</a></del>
+        </li>
       </div>
       <div class="menu-contact">
         <div class="about"><a href="/about.html">About</a></div>
@@ -36,7 +43,8 @@
     <div class="section-about">
       <h1 class="section-main-title">About</h1>
       <p class="section-main-text">I define my self as an multidementional artist: Musician, Producer, Guitarrist, Bassits, Singer, Mixing and Master engineer. Photographer, filmaker, editor, colorist.</p>
-      <p class="section-main-text">love the digital world. found that Web Development is one of the most exciting world. The best combination of art and technical side. </p>
+      <p class="section-main-text">I love the digital world.</p>
+      <p class="section-main-text">Runner, almost Vegetarian.</p>
     </div>
     <div class="about-galery"></div>
     <script src="/index.js" type="module"></script>
