--- a/blog.html
+++ b/blog.html
@@ -9,10 +9,17 @@
     <div class="menu"> 
       <div class="menu-list">
         <ul></ul>
-        <li><a class="menu-link" href="/index.html">Web Dev</a></li>
-        <li><a class="menu-link" href="/music.html">Music</a></li>
-        <li><a class="menu-link" href="/audiovisual.html">Audiovisual</a></li>
-        <li><a class="menu-link" href="/blog.html">Blog</a></li>
+        <li><a class="menu-link" href="/index.html">Web Dev</a>
+        </li>
+        <li>
+          <del> <a class="menu-link" href="/">Music</a></del>
+        </li>
+        <li>
+          <del> <a class="menu-link" href="/">Audiovisual</a></del>
+        </li>
+        <li>
+          <del> <a class="menu-link" href="/">Blog</a></del>
+        </li>
       </div>
       <div class="menu-contact">
         <div class="about"><a href="/about.html">About</a></div>
