--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
     <div class="menu"> 
       <div class="menu-list">
         <ul></ul>
-        <li><a class="menu-link" href="/index.html">Web Dev</a></li>
-        <li><a class="menu-link" href="/music.html">Music</a></li>
-        <li><a class="menu-link" href="/audiovisual.html">Audiovisual</a></li>
-        <li><a class="menu-link" href="/blog.html">Blog</a></li>
+        <li><a class="menu-link" href="/index.html">Web Dev</a>
+        </li>
+        <li>
+          <del> <a class="menu-link" href="/">Music</a></del>
+        </li>
+        <li>
+          <del> <a class="menu-link" href="/">Audiovisual</a></del>
+        </li>
+        <li>
+          <del> <a class="menu-link" href="/">Blog</a></del>
+        </li>
       </div>
       <div class="menu-contact">
         <div class="about"><a href="/about.html">About</a></div>
@@ -106,9 +113,21 @@
     <section class="section-project">
       <h1 class="section-main-title">Projects</h1>
       <div class="project-container">
+            <div class="modal">
+              <div class="modal-content">
+                <h1>arielestebansoto.com</h1>
+                <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
+              </div>
+            </div>
             <div class="card-project"><img src="/img/project/1.jpg" alt="project image">
               <div class="card--info"><a class="card-project--title" href="/index.html">arielestebansoto.com </a><span class="card-project__info--about">about the project</span></div>
               <div class="card-project-overlay"> </div>
+            </div>
+            <div class="modal">
+              <div class="modal-content">
+                <h1>Mercado Libre Home</h1>
+                <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
+              </div>
             </div>
             <div class="card-project"><img src="/img/project/mercadolibre.jpg" alt="project image">
               <div class="card--info"><a class="card-project--title" href="/projects/mercado-libre-home/index.html">Mercado Libre Home </a><span class="card-project__info--about">about the project</span></div>
@@ -117,5 +136,6 @@
       </div>
     </section>
     <script src="/index.js" type="module"></script>
+    <footer></footer>
   </body>
 </html>
