--- a/index.html
+++ b/index.html
@@ -115,36 +115,60 @@
       <div class="project-container">
             <div class="card">
               <div class="modal">
+                <div class="close"><span id="modal-close">close</span></div>
                 <h1>arielestebansoto.com</h1>
                 <div class="modal-image-container"><img src="/projects/mercado-libre-home/screenshoots/mercado-libre-home-1.png" alt="screenshoots aps"></div>
-                <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
+                <div class="moda-text-container">
+                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
+                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
+                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
+                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
+                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
+                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
+                </div>
               </div>
               <div class="card-project"><img src="/img/project/1.jpg" alt="project image">
-                <div class="card--info"><a class="card-project--title" href="/index.html">arielestebansoto.com </a><span class="card-project__info--about">about the project</span></div>
+                <div class="card--info"><a class="card-project--title" href="/index.html">arielestebansoto.com </a><span class="card-project__info--about">click for about the project</span></div>
                 <div class="card-project-overlay"> </div>
                 <div class="hastaelfondo"></div>
               </div>
             </div>
             <div class="card">
               <div class="modal">
+                <div class="close"><span id="modal-close">close</span></div>
                 <h1>Mercado Libre Home</h1>
                 <div class="modal-image-container"><img src="/projects/mercado-libre-home/screenshoots/mercado-libre-home-1.png" alt="screenshoots aps"></div>
-                <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
+                <div class="moda-text-container">
+                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
+                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
+                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
+                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
+                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
+                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
+                </div>
               </div>
               <div class="card-project"><img src="/img/project/mercadolibre.jpg" alt="project image">
-                <div class="card--info"><a class="card-project--title" href="/projects/mercado-libre-home/index.html">Mercado Libre Home </a><span class="card-project__info--about">about the project</span></div>
+                <div class="card--info"><a class="card-project--title" href="/projects/mercado-libre-home/index.html">Mercado Libre Home </a><span class="card-project__info--about">click for about the project</span></div>
                 <div class="card-project-overlay"> </div>
                 <div class="hastaelfondo"></div>
               </div>
             </div>
             <div class="card">
               <div class="modal">
-                <h1>Breaking Bad API</h1>
+                <div class="close"><span id="modal-close">close</span></div>
+                <h1>Breaking BApi</h1>
                 <div class="modal-image-container"><img src="/projects/mercado-libre-home/screenshoots/mercado-libre-home-1.png" alt="screenshoots aps"></div>
-                <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
+                <div class="moda-text-container">
+                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
+                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
+                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
+                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
+                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
+                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, necessitatibus expedita rerum adipisci numquam, consequatur minima, quod mollitia nam assumenda harum inventore nesciunt a animi porro. Placeat totam modi aliquid.</p>
+                </div>
               </div>
               <div class="card-project"><img src="/img/project/breakingbad.jpg" alt="project image">
-                <div class="card--info"><a class="card-project--title" href="/projects/breaking-bad-api/index.html">Breaking Bad API </a><span class="card-project__info--about">about the project</span></div>
+                <div class="card--info"><a class="card-project--title" href="/projects/breaking-bad-api/index.html">Breaking BApi </a><span class="card-project__info--about">click for about the project</span></div>
                 <div class="card-project-overlay"> </div>
                 <div class="hastaelfondo"></div>
               </div>
